--- a/styles/main.css
+++ b/styles/main.css
@@ -6,9 +6,11 @@ body{
 header h1{
   font-size: 175%;
   color: steelblue;
+  text-indent: right;
 }
 header h2{
   font-size: 100%;
+  text-indent: right;
 }
 main{
   
