--- a/styles/main.css
+++ b/styles/main.css
@@ -6,11 +6,11 @@ body{
 header h1{
   font-size: 250%;
   color: steelblue;
-  text-indent: right;
+  text-indent: 20px;
 }
 header h2{
   font-size: 100%;
-  text-indent: right;
+  text-indent: 20px;
 }
 main{
   
