--- a/styles/main.css
+++ b/styles/main.css
@@ -10,7 +10,7 @@ header h1{
   font-size: 250%;
   color: steelblue;
   text-indent: 75px;
-  font-style: italize
+  font-style: italic;
 }
 header h2{
   font-size: 150%;
